k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: socialtv
  labels:
    app.kubernetes.io/part-of: socialtv
